new file:   Week_2_functions/.OTTER_LOG 	new file:   Week_2_functions/lec_act_2_functions_2024_01_16T22_53_02_902397.zip 	modified:   Week_2_functions/lec_act_2_functions.ipynb

--- a/Week_1_data_structures/b_practice_numpy.ipynb
+++ b/Week_1_data_structures/b_practice_numpy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.11111111 0.22222222 0.33333333 0.44444444 0.55555556\n",
+      " 0.66666667 0.77777778 0.88888889 1.        ]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a 1x10 array of numbers that starts at 0, goes to 1, and is evenly spaced (linspace)\n",
-    "my_linspace_array = None"
+    "my_linspace_array = np.linspace(start=0, stop=1.0, num=10)\n",
+    "print(my_linspace_array)"
    ]
   },
   {
@@ -47,12 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.         1.22222222 1.44444444 1.66666667 1.88888889 2.11111111\n",
+      " 2.33333333 2.55555556 2.77777778 3.        ]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Your answer here\n",
-    "my_modified_array = None"
+    "my_modified_array = 2 * my_linspace_array + 1\n",
+    "print(my_modified_array)"
    ]
   },
   {
@@ -74,13 +94,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.11111111 0.11111111 0.11111111 0.11111111 0.11111111 0.11111111\n",
+      "  0.11111111 0.11111111 0.11111111 0.11111111]\n",
+      " [1.22222222 1.22222222 1.22222222 1.22222222 1.22222222 1.22222222\n",
+      "  1.22222222 1.22222222 1.22222222 1.22222222]]\n",
+      "My matrix shape: (2, 10), should be (2, size of linspace array)\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Your answer here\n",
-    "my_new_matrix = None\n",
-    "\n",
+    "my_new_matrix = np.zeros((2, 10), dtype=float)\n",
+    "my_new_matrix[0] = my_linspace_array[1]\n",
+    "my_new_matrix[1] = my_modified_array[1]\n",
+    "print(my_new_matrix)\n",
     "print(f\"My matrix shape: {my_new_matrix.shape}, should be (2, size of linspace array)\")"
    ]
   },
@@ -430,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
