--- a/Week_1_data_structures/lec_act_1_data_structures.ipynb
+++ b/Week_1_data_structures/lec_act_1_data_structures.ipynb
@@ -375,7 +375,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>list</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>list</pre></strong> passed! 🎉</p>"
       ],
       "text/plain": [
        "list results: All test cases passed!"
@@ -524,7 +524,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>nparray</pre></strong> passed! ✨</p>"
+       "<p><strong><pre style='display: inline;'>nparray</pre></strong> passed! 🙌</p>"
       ],
       "text/plain": [
        "nparray results: All test cases passed!"
@@ -680,7 +680,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>fix_broken</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>fix_broken</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "fix_broken results: All test cases passed!"
@@ -738,7 +738,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>hours_collaborators</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>hours_collaborators</pre></strong> passed! 🚀</p>"
       ],
       "text/plain": [
        "hours_collaborators results: All test cases passed!"
