--- a/Week_1_data_structures/a_tutorial_numpy.ipynb
+++ b/Week_1_data_structures/a_tutorial_numpy.ipynb
@@ -21,9 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\users\\vinid\\anaconda3\\lib\\site-packages (1.24.3)\n"
+     ]
+    }
+   ],
    "source": [
     "# Install a pip package in the current Jupyter kernel\n",
     "# Note: this is a safety check in case your JN install was not in the same place as your libraries\n",
@@ -33,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of csv data (660, 13)\n",
+      "Element in first row, first column: -0.766481911\n",
+      "Element in first row, second column: 5.317314204\n",
+      "Element in second row, first column: -2.597236044\n",
+      "Element in last row, last column: 269.9840088\n",
+      "Element in third row, last column: 299.9920044\n"
+     ]
+    }
+   ],
    "source": [
     "# This creates a variable file_name that is a string. You could just put the string into loadtext\n",
     "#  instead of creating a variable, but using a variable means you can ask what the filename is later - for example,\n",
@@ -149,9 +170,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list, notice flat format\n",
+      "[[0, 1], [2.0, 4.0], [5.0, 10.0]]\n",
+      "List as numpy array, notice matrix format\n",
+      "[[ 0.  1.]\n",
+      " [ 2.  4.]\n",
+      " [ 5. 10.]]\n",
+      "Data dimensions: (3, 2), total number of elements: 6\n",
+      "First row, first column element: 0.0\n",
+      "Last row, last column element: 10.0\n"
+     ]
+    }
+   ],
    "source": [
     "# A list with three elements in it. Each element is, in turn, a list with 2 elements\n",
     "my_list = [[0, 1], [2.0, 4.0], [5.0, 10.0]]\n",
@@ -206,9 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "Number of dimensions: 2, dimension sizes: (2, 3), total number of elements: 6\n",
+      "Element in first row, first column: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "data_zeros = np.zeros((2, 3), dtype=float)\n",
     "# Numpy will do it's best to print out numpy arrays\n",
@@ -265,9 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linspace dimensions: (15,), total number of elements: 15\n",
+      "First value: -1.0, last value: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# linspace (and a similar function, arange) are handy ways to make numpy arrays with evenly-spaced values\n",
     "#   start is -1, end is 1.0, number of elements is 15 (see last print out)\n",
@@ -361,9 +418,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Means with 19.000150118438576 and without 19.02898190921011 zeros\n"
+     ]
+    }
+   ],
    "source": [
     "mean_including_zeros = np.mean(data_from_csv)\n",
     "\n",
@@ -447,9 +512,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orig shape (3, 6) and size 18\n",
+      "Incorrect matrix shape (18,) and size 18\n",
+      "Correct matrix shape (3, 6) and size 18\n"
+     ]
+    }
+   ],
    "source": [
     "# Make a 3x6 matrix\n",
     "my_orig_matrix = np.ones((3, 6))\n",
@@ -475,9 +550,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (3,6) (18,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m oops \u001b[38;5;241m=\u001b[39m my_orig_matrix \u001b[38;5;241m+\u001b[39m my_incorrect_size_matrix\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,6) (18,) "
+     ]
+    }
+   ],
    "source": [
     "oops = my_orig_matrix + my_incorrect_size_matrix"
    ]
@@ -683,7 +770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
